added more code for dynamos